--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "travel-site",
     "version": "1.0.0",
     "scripts": {
-        "dev": "webpack serve",
+        "dev": "webpack",
         "build": "webpack",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
@@ -33,7 +33,7 @@
         "postcss-simple-vars": "^6.0.3",
         "style-loader": "^2.0.0",
         "webpack": "^5.20.1",
-        "webpack-cli": "^4.5.0",
+        "webpack-cli": "^4.7.2",
         "webpack-dev-server": "^3.11.2"
     }
 }
